Refatored the code.